k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smstore-site
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - tiemcuatui.com
    secretName: wildcard-tiemcuatui-com-tls
  rules:
  - host: tiemcuatui.com
    http:
      paths:
      - path: /
        backend:
          serviceName: smstore-site
          servicePort: 80
      - path: /partner(.*)
        backend:
          serviceName: smstore-site
          servicePort: 80
      - path: /admin(.*)
        backend:
          serviceName: smstore-site
          servicePort: 80
      - path: /_smstore_site(.*)
        backend:
          serviceName: smstore-site
          servicePort: 80
